--- a/html/style.css
+++ b/html/style.css
@@ -13,18 +13,20 @@
 
 body {
 	font: 16px/1.5 system-ui, sans-serif;
-	margin: 0.5rem;
+	margin: 0;
 }
 
 dialog {
+	background: ButtonFace;
 	border: 1px solid ButtonBorder;
 	border-radius: 0.25rem;
 	box-shadow: 0.25rem 0.25rem 0.5rem #00000066;
+	margin: 1rem;
 	position: fixed;
 	top: auto;
-	right: 1rem;
-	bottom: 1rem;
-	left: 1rem;
+	right: 0;
+	bottom: 0;
+	left: 0;
 	width: auto;
 }
 
@@ -32,6 +34,7 @@ form {
 	border: 0;
 	display: grid;
 	gap: 0.5rem;
+	margin: 1rem;
 	padding: 0;
 }
 
@@ -39,9 +42,12 @@ input, textarea {
 	border: 1px solid ButtonBorder;
 	border-radius: 0.25rem;
 	font: inherit;
-	padding: 0.25rem;
+	padding: 0.5rem;
 }
 
-legend {
-	padding: 0.5rem 0;
+@media (min-width: 40rem) {
+	body {
+		margin: 0 auto;
+		width: 40rem;
+	}
 }
